# UAS-2023

./: .gitignore  README.md
arduplane_scripts/: VTOL.params  launch.sh
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/beginner_tutorials/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/uas/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/lib/pkgconfig/: uas.pc  (+2 more)
catkin_ws/logs/uas/: build.check.006.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml  package.xml.save  package.xml.save.1
catkin_ws/src/uas/: CMakeLists.txt  package.xml
catkin_ws/src/uas/src/: uas_calls.cpp  uas_calls.h  uas_mission.cpp
documentation/: Overview.md
documentation/meeting_notes/: Notes Sep 28th.txt
launch/: VTOL.mission  mavros.sh  px4.launch
uas/src/: uas_call_functions.cpp  uas_calls.cpp  uas_calls.h  uas_mission.cpp
xipiter_ws/devel/: .catkin  .rosinstall
xipiter_ws/src/xipiter_ros/: CMakeLists.txt  package.xml
(+104 files in other folders)
